--- a/src/App.css
+++ b/src/App.css
@@ -171,17 +171,22 @@ body {
 }
 
 .step {
-  width: 200px;
+  width: 230px;
   padding: 20px;
-  background-color: #fff;
+  background: linear-gradient(to bottom, #FF6F00, #ffcaa1);
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .step h3 {
-  color: #FF6F00;
+  color: #FFFFFF;
 }
+
+.step p {
+  opacity: 0.7;
+}
+
 
 .zoom-on-hover:hover {
   transform: scale(1.05);
