--- a/src/App.css
+++ b/src/App.css
@@ -161,6 +161,7 @@ body {
   font-size: 2em;
   margin-bottom: 20px;
   animation: slideIn 1s ease-out;
+  color: #7d7d7d;
 }
 
 .steps {
@@ -173,20 +174,19 @@ body {
 .step {
   width: 230px;
   padding: 20px;
-  background: linear-gradient(to bottom, #FF6F00, #ffcaa1);
+  background-color: #FFFFFF;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .step h3 {
-  color: #FFFFFF;
+  color: #FF6F00;
 }
 
 .step p {
-  opacity: 0.7;
+  color: #7d7d7d
 }
-
 
 .zoom-on-hover:hover {
   transform: scale(1.05);
